# codetwine

./: .env.example  .gitignore  CHANGELOG.md  README.md  doc_template.json  main.py  pyproject.toml
codetwine/: doc_creator.py  import_to_path.py  output.py  pipeline.py
codetwine/config/: logger.py  settings.py
codetwine/extractors/: definitions.py  dependency_graph.py
codetwine/llm/: __init__.py  client.py
codetwine/parsers/: ts_parser.py
codetwine/utils/: file_utils.py
examples/: doc_template_python.json
examples/rlm_qa/: qa_tools.py  rlm_qa_agent.py
examples/sample_output/codetwine/: dependency_graph.md  project_dependency_summary.json  project_knowledge.json
examples/sample_output/codetwine/codetwine/config/logger_py/: doc.json  doc.md  file_dependencies.json
examples/sample_output/codetwine/codetwine/config/logging_py/: doc.json  doc.md  file_dependencies.json
examples/sample_output/codetwine/codetwine/config/settings_py/: doc.json  doc.md  (+1 more)
examples/sample_output/codetwine/codetwine/doc_creator_py/: doc.json  doc.md  file_dependencies.json
examples/sample_output/codetwine/codetwine/file_analyzer_py/: doc.json  doc.md  file_analyzer.py  file_dependencies.json
examples/sample_output/codetwine/codetwine/import_to_path_py/: doc.json  doc.md  file_dependencies.json
examples/sample_output/codetwine/codetwine/output_py/: doc.json  doc.md  file_dependencies.json
examples/sample_output/codetwine/codetwine/pipeline_py/: doc.json  doc.md  file_dependencies.json
examples/sample_output/codetwine/main_py/: doc.json  doc.md  file_dependencies.json
(+38 files in other folders)
